[package]
name = "flowcuda-kernels"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors = ["Sai Vishwak K <saivishwak40@gmail.com>"]
readme.workspace = true

[dependencies]
