[package]
categories = ["science", "cuda"]
authors = ["Sai Vishwak K <saivishwak40@gmail.com>"]
name = "flowcuda-kernels"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Cuda Kernels for flowtorch"
keywords = ["blas", "tensor", "machine-learning", "CUDA"]
readme.workspace = true

[dependencies]
