[package]
categories = ["science", "cuda"]
authors = ["Sai Vishwak K <saivishwak40@gmail.com>"]
name = "flowcuda-kernels"
version = "0.1.0"
edition = "2021"
description = "Cuda Kernels for flowtorch"
keywords = ["blas", "tensor", "machine-learning", "CUDA"]

[build-dependencies]
bindgen_cuda = "0.1.5"
