[package]
name = "flowtorch-core"
authors = ["Sai Vishwak K <saivishwak40@gmail.com>"]
license.workspace = true
edition.workspace = true
readme.workspace = true
version.workspace = true

description = "Safe & Performant Scientific Computing Library."
repository = "https://github.com/saivishwak/flowtorch"
keywords = ["blas", "tensor", "machine-learning"]
categories = ["science"]

[features]
default = ["cuda"]
cuda = ["cudarc", "dep:flowcuda-kernels"]

[dependencies]
cudarc = { workspace = true, optional = true }
flowcuda-kernels = { workspace = true, optional = true }
thiserror = "1.0.61"
