[package]
name = "flowtorch-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "flowtorch_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.20.0"
flowtorch-core = { path = "../flowtorch-core", version = "0.1.0" }