[package]
name = "flowtorch"
authors = ["Sai Vishwak K <saivishwak40@gmail.com>"]
license.workspace = true
edition.workspace = true
readme.workspace = true
version.workspace = true

description = "Safe & Performant Scientific Computing Library."
repository = "https://github.com/saivishwak/flowtorch"
keywords = ["blas", "tensor", "machine-learning"]
categories = ["science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
